[package]
name = "espuino_podcast_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
podcast_search = "=0.5.0"
tokio = { version = "1", features = ["full"] }
m3u = "1.0.0"
reqwest = "0.11"
feed-rs = "1.4.0"
tempfile = "3.1.0"
configparser= "3.0"
suppaftp = "5.3"
remotefs = "=0.2.0"
remotefs-ftp = "0.1.3"
log = "0.4"