[package]
name = "espuinocast"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
m3u = "1.0"
reqwest = {version = "0.11", features = ["json", "multipart"]}
feed-rs = "1.4"
configparser= "3.0"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
strip = true
